--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
     volumes:
-      - ./kafka-data1:/var/lib/kafka/data
+      - ./kafka-data1:/tmp/kafka-logs
 
   broker-2:
     image: apache/kafka:latest
@@ -33,7 +33,7 @@ services:
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
     volumes:
-      - ./kafka-data2:/var/lib/kafka/data
+      - ./kafka-data2:/tmp/kafka-logs
 
   broker-3:
     image: apache/kafka:latest
@@ -51,7 +51,7 @@ services:
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "false"
     volumes:
-      - ./kafka-data3:/var/lib/kafka/data
+      - ./kafka-data3:/tmp/kafka-logs
 
   kafka-ui:
     image: ghcr.io/kafbat/kafka-ui
