--- a/opensearch/docker-compose.yml
+++ b/opensearch/docker-compose.yml
@@ -18,7 +18,7 @@ services:
         soft: 65536 # Maximum number of open files for the opensearch user - set to at least 65536
         hard: 65536
     volumes:
-      - ./opensearch-data1:/usr/share/opensearch/data # Creates volume called opensearch-data1 and mounts it to the container
+      - opensearch-data1:/usr/share/opensearch/data # Creates volume called opensearch-data1 and mounts it to the container
     ports:
       - 9200:9200 # REST API
       - 9600:9600 # Performance Analyzer
@@ -42,7 +42,7 @@ services:
         soft: 65536
         hard: 65536
     volumes:
-      - ./opensearch-data2:/usr/share/opensearch/data
+      - opensearch-data2:/usr/share/opensearch/data
 
   opensearch-dashboards:
     image: opensearchproject/opensearch-dashboards:latest # Make sure the version of opensearch-dashboards matches the version of opensearch installed on other nodes
