--- a/opensearch/docker-compose.yml
+++ b/opensearch/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         soft: 65536 # Maximum number of open files for the opensearch user - set to at least 65536
         hard: 65536
     volumes:
-      - data1:/usr/share/opensearch/data # Creates volume called opensearch-data1 and mounts it to the container
+      - ./data/node1/data:/usr/share/opensearch/data # Creates volume called opensearch-data1 and mounts it to the container
     ports:
       - 9200:9200 # REST API
       - 9600:9600 # Performance Analyzer
@@ -40,7 +40,7 @@ services:
         soft: 65536
         hard: 65536
     volumes:
-      - data2:/usr/share/opensearch/data
+      - ./data/node2/data:/usr/share/opensearch/data
 
   opensearch-dashboards:
     image: opensearchproject/opensearch-dashboards:latest # Make sure the version of opensearch-dashboards matches the version of opensearch installed on other nodes
@@ -50,7 +50,3 @@ services:
       - "5601" # Expose port 5601 for web access to OpenSearch Dashboards
     environment:
       OPENSEARCH_HOSTS: '["https://node1:9200","https://node2:9200"]' # Define the OpenSearch nodes that OpenSearch Dashboards will query
-
-volumes:
-  data1:
-  data2:
